[JSC] Fix WebAssembly.Global's typename for "anyfunc" https://bugs.webkit.org/show_bug.cgi?id=235105

Reviewed by Keith Miller.

LayoutTests/imported/w3c:

Update wpt/wasm which includes "anyfunc" tests.

* web-platform-tests/wasm/jsapi/assertions.js:
(assert_exported_function):
* web-platform-tests/wasm/jsapi/constructor/toStringTag.any.js:
* web-platform-tests/wasm/jsapi/exception/basic.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/basic.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/basic.tentative.any.js: Added.
(assert_throws_wasm):
(promise_test.async const):
(promise_test):
* web-platform-tests/wasm/jsapi/exception/basic.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/basic.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/constructor.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/constructor.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/constructor.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/exception/constructor.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/constructor.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/is.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/is.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/is.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/exception/is.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/is.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.js: Added.
(assert_type):
(test):
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/exception/w3c-import.log: Added.
* web-platform-tests/wasm/jsapi/function/call.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/call.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/function/call.tentative.any.js: Added.
(addxy):
(test):
(string_appeared_here.test):
* web-platform-tests/wasm/jsapi/function/call.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/call.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/function/constructor.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/constructor.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/function/constructor.tentative.any.js: Added.
(addxy):
(test):
(string_appeared_here.test):
* web-platform-tests/wasm/jsapi/function/constructor.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/constructor.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/function/table.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/table.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/function/table.tentative.any.js: Added.
(testfunc):
(test):
* web-platform-tests/wasm/jsapi/function/table.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/table.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/function/type.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/type.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/function/type.tentative.any.js: Added.
(addNumbers):
(doNothing):
(assert_function):
(test):
(string_appeared_here.test):
* web-platform-tests/wasm/jsapi/function/type.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/function/type.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/function/w3c-import.log: Added.
* web-platform-tests/wasm/jsapi/global/type.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/global/type.tentative.any.js:
(test):
(string_appeared_here.test):
* web-platform-tests/wasm/jsapi/global/type.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/proto-from-ctor-realm.html:
* web-platform-tests/wasm/jsapi/table/constructor-reftypes.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/constructor-reftypes.tentative.any.js: Removed.
* web-platform-tests/wasm/jsapi/table/constructor-reftypes.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/constructor.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/constructor.any.js:
(test.get assert_array_equals):
(test):
* web-platform-tests/wasm/jsapi/table/constructor.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/get-set.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/get-set.any.js:
(test):
* web-platform-tests/wasm/jsapi/table/get-set.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/grow-reftypes.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/grow-reftypes.tentative.any.js: Removed.
* web-platform-tests/wasm/jsapi/table/grow-reftypes.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/grow.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/grow.any.js:
(test):
* web-platform-tests/wasm/jsapi/table/grow.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/set-reftypes.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/set-reftypes.tentative.any.js: Removed.
* web-platform-tests/wasm/jsapi/table/set-reftypes.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/type.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/table/type.tentative.any.js:
(test):
* web-platform-tests/wasm/jsapi/table/type.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/table/type.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/table/w3c-import.log:
* web-platform-tests/wasm/jsapi/tag/constructor.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/constructor.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/tag/constructor.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/tag/constructor.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/constructor.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/tag/toString.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/toString.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/tag/toString.tentative.any.js: Added.
(test):
* web-platform-tests/wasm/jsapi/tag/toString.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/toString.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/tag/type.tentative.any-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/type.tentative.any.html: Added.
* web-platform-tests/wasm/jsapi/tag/type.tentative.any.js: Added.
(assert_type):
(test):
* web-platform-tests/wasm/jsapi/tag/type.tentative.any.worker-expected.txt: Added.
* web-platform-tests/wasm/jsapi/tag/type.tentative.any.worker.html: Added.
* web-platform-tests/wasm/jsapi/tag/w3c-import.log: Added.
* web-platform-tests/wasm/jsapi/wasm-module-builder.js:
(WasmModuleBuilder.prototype.addTable):
(WasmModuleBuilder.prototype.toBuffer):
* web-platform-tests/wasm/serialization/module/cross-origin-module-sharing-fails-expected.txt: Added.
* web-platform-tests/wasm/serialization/module/cross-origin-module-sharing-fails.html: Added.
* web-platform-tests/wasm/serialization/module/resources/incrementer-iframe-failure.html: Added.
* web-platform-tests/wasm/serialization/module/resources/w3c-import.log:
* web-platform-tests/wasm/serialization/module/share-module-cross-origin-fails.sub-expected.txt: Added.
* web-platform-tests/wasm/serialization/module/share-module-cross-origin-fails.sub.html: Added.
* web-platform-tests/wasm/serialization/module/w3c-import.log:
* web-platform-tests/wasm/webapi/contenttype.any-expected.txt:
* web-platform-tests/wasm/webapi/contenttype.any.js:
* web-platform-tests/wasm/webapi/contenttype.any.worker-expected.txt:
* web-platform-tests/wasm/webapi/resources/incrementer.no_mime_type.wasm: Added.
* web-platform-tests/wasm/webapi/resources/incrementer.wasm: Added.
* web-platform-tests/wasm/webapi/resources/incrementer.wasm.headers: Added.
* web-platform-tests/wasm/webapi/resources/incrementer.wrong_mime_type.wasm: Added.
* web-platform-tests/wasm/webapi/resources/incrementer.wrong_mime_type.wasm.headers: Added.
* web-platform-tests/wasm/webapi/resources/w3c-import.log: Added.
* web-platform-tests/wasm/webapi/w3c-import.log:
* web-platform-tests/wasm/webapi/wasm_stream_compile_test-expected.txt: Added.
* web-platform-tests/wasm/webapi/wasm_stream_compile_test.html: Added.
* web-platform-tests/wasm/webapi/wasm_stream_instantiate_test-expected.txt: Added.
* web-platform-tests/wasm/webapi/wasm_stream_instantiate_test.html: Added.

Source/JavaScriptCore:

We should return "anyfunc" string instead of "funcref" according to the spec[1,2].

[1]: https://webassembly.github.io/spec/js-api/#globals
[2]: https://webassembly.github.io/spec/js-api/#tables

* wasm/js/JSWebAssemblyGlobal.cpp:
(JSC::JSWebAssemblyGlobal::type):
* wasm/js/JSWebAssemblyTable.cpp:
(JSC::JSWebAssemblyTable::type):


Canonical link: https://commits.webkit.org/246069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288049 268f45cc-cd09-0410-ab3c-d52691b4dbfc